Attempting to fix the iOS stretching bug with align items flex start

--- a/src/index.css
+++ b/src/index.css
@@ -256,6 +256,7 @@ flex-direction: column;
     overflow: hidden;
     display: flex;
     justify-content: center;
+    align-items: flex-start;
     flex-direction: column;
 }
 
